# otus-cpp-pro-hw6

./: .gitignore  CMakeLists.txt  Doxyfile  annotated.html  classMatrix-members.html  classMatrix.html  classMatrixLegacy-members.html  classMatrixLegacy.html  classMatrixLegacy_1_1Indexer-members.html  classMatrixLegacy_1_1Indexer.html  classMatrixLegacy_1_1Indexer_3_010_00_01Dummy_01_4-members.html  classMatrixLegacy_1_1Indexer_3_010_00_01Dummy_01_4.html  classMatrix_1_1Indexer-members.html  classMatrix_1_1Indexer.html  classMatrix_1_1Indexer_3_010_00_01Dummy_01_4-members.html  classMatrix_1_1Indexer_3_010_00_01Dummy_01_4.html  classes.html  deprecated.html  dir_4ae051286ea4b0b0ee20a2ed1d26e601.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  files.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  (+15 more)
.github/workflows/: README.md  release.yaml
lib/: CMakeLists.txt
lib/src/: matrix.h  matrix2.h  matrix_operators.inl  (+3 more)
lib/tests/: CMakeLists.txt  matrix_tests.cpp
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
src/: main.cpp
