cmake_minimum_required(VERSION 3.12)

set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VERSION 0.0.${PATCH_VERSION})

project(matrix VERSION ${PROJECT_VERSION} LANGUAGES CXX)

set(INSTALL_TARGET ${PROJECT_NAME} CACHE INTERNAL "")
set(LIB_BINARY ${INSTALL_TARGET}_lib CACHE INTERNAL "")

add_subdirectory(lib)
add_subdirectory(src)

install(TARGETS ${INSTALL_TARGET} RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT togushakov@gmail.com)
include(CPack)